--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,10 @@
   padding: 0;
 }
 
-input, select, textarea, button {
+input,
+select,
+textarea,
+button {
   border: none;
   box-shadow: none;
   outline: none;
@@ -25,7 +28,8 @@ a:active {
   color: inherit;
 }
 
-ul, ol {
+ul,
+ol {
   list-style: none;
 }
 
@@ -34,7 +38,227 @@ body {
 }
 
 .wrapper {
-  min-height: 100vh;
-  padding: 48px 24px 0 24px;
+  overflow-x: hidden;
+  background-color: hsl(0, 0%, 98%);
 }
 
+.hero-image-full {
+  position: relative;
+  left: -20px;
+  max-width: calc(100% + 40px);
+}
+
+header {
+  text-align: center;
+  padding: 48px 24px 0 24px;
+  margin-bottom: 54px;
+}
+
+header a {
+  display: inline-block;
+  width: 119px;
+  height: 28px;
+}
+
+main {
+  text-align: center;
+  margin-top: 48px;
+  padding: 0 24px 0 24px;
+}
+
+.hero-text h1 {
+  margin-top: 0;
+  margin-bottom: 24px;
+  padding: 0 20px;
+  font-size: 40px;
+  line-height: 44px;
+  color: hsl(240, 20.8%, 19.8%);
+}
+
+.hero-text p {
+  margin-bottom: 32px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 26px;
+  color: hsl(240, 10.1%, 57.3%);
+}
+
+a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: 900;
+  font-size: 16px;
+  line-height: 26px;
+  border-radius: 29px;
+  margin: 0 auto;
+}
+
+a.download-btn {
+  width: 193px;
+  height: 58px;
+  margin-bottom: 16px;
+  color: hsl(0, 0%, 100%);
+  background: hsl(192.4, 37.4%, 48.2%);
+}
+
+a.download-btn:hover {
+  background: hsl(192.1, 53.5%, 63.7%);
+}
+
+a.download-btn span {
+  color: hsl(192.5, 89.8%, 76.9%);
+}
+
+a.info-btn {
+  width: 139px;
+  height: 58px;
+  color: hsl(0, 0%, 100%);
+  background: hsl(267.8, 34.5%, 53.3%);
+  border-radius: 29px;
+}
+
+a.info-btn:hover {
+  background: hsl(267.8, 54.7%, 70.6%);
+}
+
+.divider {
+  width: 56px;
+  height: 140px;
+  margin: 64px auto;
+}
+
+.line {
+  width: 1px;
+  height: 84px;
+  margin: 0 auto;
+  background-color: hsla(240, 10.1%, 57.3%, 0.25);
+}
+
+.circle {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 56px;
+  height: 56px;
+  border-radius: 50%;
+  border: 1px solid hsla(240, 10.1%, 57.3%, 0.25);
+}
+
+.circle p {
+  font-weight: 900;
+  font-size: 16px;
+  line-height: 26px;
+  color: hsl(240, 10.1%, 57.3%);
+}
+
+.pictures {
+  display: grid;
+  grid-template-columns: repeat(2, max-content);
+  grid-template-rows: repeat(2, max-content);
+  justify-content: center;
+  column-gap: 25px;
+  row-gap: 24px;
+  margin-bottom: 64px;
+}
+
+.pictures img {
+  width: 151px;
+  height: 143px;
+  border-radius: 8px;
+}
+
+.modern-use .cyan-text {
+  font-weight: 900;
+  font-size: 16px;
+  line-height: 26px;
+  letter-spacing: 4px;
+  text-transform: uppercase;
+  color: hsl(192.4, 37.4%, 48.2%);
+}
+
+.modern-use h2 {
+  font-weight: 900;
+  font-size: 32px;
+  line-height: 36px;
+  margin-top: 24px;
+  margin-bottom: 32px;
+  color: hsl(240, 20.8%, 19.8%);
+}
+
+.modern-use p:last-child {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 26px;
+  margin-bottom: 32px;
+  color: hsl(240, 10.1%, 57.3%);
+}
+
+.divider:last-of-type {
+  position: relative;
+  z-index: 1;
+  margin-bottom: 0;
+}
+
+.divider:last-of-type .circle {
+  background-color: hsl(0, 0%, 98%);
+}
+
+footer {
+  position: relative;
+  display: flex;
+  top: -28px;
+  margin-bottom: -28px;
+}
+
+footer img {
+  max-width: 100%;
+  height: 428px;
+  object-fit: cover;
+  opacity: 0.25;
+}
+
+.overlay {
+  background: hsl(192.1, 37.2%, 53.1%);
+  mix-blend-mode: multiply;
+}
+
+.overlay,
+.footer-text {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.footer-text {
+  text-align: center;
+  padding: 92px 24px 72px 24px;
+  color: hsl(0, 0%, 98%);
+}
+
+.footer-text h2 {
+  margin-bottom: 24px;
+  font-size: 32px;
+  line-height: 36px;
+}
+
+.footer-text p {
+  margin-bottom: 32px;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 26px;
+}
+
+.footer-text a.download-btn {
+  background-color: hsl(267.8, 34.5%, 53.3%);
+}
+
+.footer-text a.download-btn span {
+  color: hsl(267.9, 100%, 86.1%);
+}
+
+.footer-text a.download-btn:hover {
+  background-color: hsl(267.8, 54.7%, 70.6%);
+}
